--- a/StartDatabaseSeed/StartDatabaseSeed.csproj
+++ b/StartDatabaseSeed/StartDatabaseSeed.csproj
@@ -20,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Migrations\" />
+    <Folder Include="DTOs\DbDTOs\" />
   </ItemGroup>
 
 </Project>
