--- a/StartDatabaseSeed/StartDatabaseSeed.csproj
+++ b/StartDatabaseSeed/StartDatabaseSeed.csproj
@@ -29,7 +29,7 @@
 
   <ItemGroup>
     <None Update="appsettings.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
